2012-06-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/gmp-convert.R (.bigz2mpfr, .bigq2mpfr): new optional argument
	\code{precB}, typically for increasing the default precision.

2012-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/optimizers.R (optimizeR): new simple golden ratio, thanks to
	Hans Borchert.

2012-05-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.4-8, released to CRAN.

	* R/mpfr.R (diff.mpfr): new method; as diff.default() commits unclass(x)
	(str.mpfr): new.

2012-05-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/as.R (formatN.mpfr): add method
	* NAMESPACE: import S3 generic 'formatN' from gmp.

2012-05-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: import S3 generic 'is.whole' from gmp( >= 0.5-2) now.
	* man/is.whole.Rd: only mpfr method.

2012-04-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.4-7; depend on new gmp;
	can get rid of  if(<gmp recent enough>) tests.

	* R/gmp-convert.R (.bigq2mpfr): new.

2012-02-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.4-6, (Depends): gmp, not just "suggest"..
	so we have a well-defined search() path order: Rmpfr comes before gmp

	* R/special-fun.R (pnorm): much improved partly bad code, thanks to
	a report from Jerry Lewis.

2012-01-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/utils.c (my_mpfr_choose, my_mpfr_poch): fix case n == 0.

	* R/mpfr.R, R/array.R: add argument 'right = TRUE' to the print()
	* man/mpfr-utils.Rd: methods which looks better, e.g., for integers.

	* src/utils.c (R_MPFR_2_Numeric_Function)
	(R_MPFR_2_Num_Long_Function): do *not* warn anymore when arguments
	are of "non-matching" lengths.

	* R/Math.R (chooseMpfr.all): new arguments 'k0', 'alternating'
	and 'precBits'.

2011-12-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.4-5

	* src/convert.c (mpfr2str): dig_n_max was off
